--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,16 @@
 {
     "dataworkspace.excludedProjects": [
         "sa/sa.sqlproj",
-        "Dados_brasileirao_2003_2023/Dados_brasileirao_2003_2023.sqlproj"
-    ]
+        "Dados_brasileirao_2003_2023/Dados_brasileirao_2003_2023.sqlproj",
+        "PIM/PIM.sqlproj"
+    ],
+    "python.testing.unittestArgs": [
+        "-v",
+        "-s",
+        "./teste",
+        "-p",
+        "*test.py"
+    ],
+    "python.testing.pytestEnabled": false,
+    "python.testing.unittestEnabled": true
 }
